snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220817.130540-1-all.jar.md5
08e106d0a5607d0dcc149f76ff831505